<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <kef.technology.allinoneshopping.MyWebview
            android:id="@+id/home_webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:id="@+id/error_page_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:background="@color/white"
            android:visibility="gone"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_connect"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <ImageView
                android:layout_width="@dimen/standard_155"
                android:layout_height="@dimen/standard_155"
                android:scaleType="fitCenter"
                android:alpha="0.5"
                android:src="@drawable/ic_baseline_wifi_off_24"
                android:contentDescription="@string/no_connect" />
            <TextView
                android:id="@+id/error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:textSize="@dimen/text_normal_size"
                android:textColor="@color/black"
                android:text="@string/no_connect_message"/>
            <Button
                android:id="@+id/retry_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_margin="15dp"
                android:text="@string/retry"/>
        </LinearLayout>
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress"
            style="@style/linearLoadingIndicator"
            android:layout_alignParentTop="true"/>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/ad_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"/>

    <View
        android:id="@+id/fab_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_700"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_back"
        style="@style/fab"
        app:maxImageSize="@dimen/standard_40"
        android:src="@drawable/ic_baseline_navigate_before_24"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_forward"
        style="@style/fab"
        app:maxImageSize="@dimen/standard_40"
        android:src="@drawable/ic_baseline_navigate_next_24"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_refresh"
        style="@style/fab"
        app:maxImageSize="30dp"
        android:src="@drawable/ic_baseline_refresh_24"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_home"
        style="@style/fab"
        app:maxImageSize="30dp"
        android:src="@drawable/ic_baseline_home_24"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_action"
        style="@style/fab"
        app:maxImageSize="35dp"
        app:fabSize="normal"
        android:src="@drawable/ic_baseline_control_action_24"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>